# rag-langchain-hana-example

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
data/: rag_example_inputs.csv
notebooks/: rag_application_example.ipynb
scripts/: delete_hana_vector_table.py  write_to_hana_vector_table.py
secrets/: gen-ai-hub-service-key-example.json  hana-secrets-example.json
src/: configs.py
src/api/: app.py
src/api/models/: requests.py  responses.py
src/utils/: app.py  connections.py
