[tool.poetry]
name = "rag-langchain-hana-example"
version = "0.1.0"
description = ""
authors = ["I574161 <yu.xuan.lee@sap.com>"]
readme = "README.md"
packages = [
    { include = "src", from = "." }
]

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.1.20"
hdbcli = "^2.20.22"
generative-ai-hub-sdk = "^1.2.2"
pandas = "^2.2.2"


[tool.poetry.group.notebook.dependencies]
notebook = "^7.1.3"


[tool.poetry.group.rest-api.dependencies]
fastapi = "^0.111.0"
uvicorn = "^0.29.0"


[tool.poetry.group.lint.dependencies]
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
